feat: enhance goal management with improved validation and exception handling